# sck-dashboard

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
collector/: Dockerfile  collector.py  config.py  pyproject.toml
collector/tests/: mock_api_response.json  test_collector.py
grafana/provisioning/dashboards/: dashboard.yml  sck-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
scripts/: backfill.py  seed-data.py
