[project]
name = "sck-collector"
version = "0.1.0"
description = "Smart Citizen Kit data collector — polls API, writes to InfluxDB"
requires-python = ">=3.12"
dependencies = [
    "influxdb-client>=1.40.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "PLW",  # pylint warnings
]

[tool.ruff.lint.isort]
known-first-party = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
